--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,85 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+}
+
+main {
+	width: 100%;
+}
+
+h1 {
+	text-align: center;
+	padding-top: 20px;
+}
+
+.video-container {
+	width: 100%;
+	padding-top: 20px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+video {
+	width: 90%;
+	max-width: 700px;
+}
+
+.button-container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	margin-top: 50px;
+}
+
+.control-btn {
+	display: flex;
+	justify-content: center;
+	margin-bottom: 15px;
+}
+
+.control-btn button:first-child {
+	margin-right: 20px;
+}
+
+button {
+	min-width: 120px;
+	padding: 10px 15px;
+	background-color: #fff;
+
+	text-transform: uppercase;
+	text-align: center;
+	color: #333;
+	font-weight: 700;
+
+	border: 2px solid #333;
+	outline: none;
+}
+
+button#start {
+	background-color: #249c24;
+	color: #fff;
+}
+
+button#start:hover {
+	background-color: #298029;
+}
+
+button:hover {
+	cursor: pointer;
+	background-color: #333;
+	color: #fff;
 }
